[package]
name = "corrosive_physics"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# math
num = "0.4.0"
nalgebra = { version="0.31.0", features=["serde-serialize"]}
delaunator = "1.0.1"

# multithreading
rayon = "1.5.3"
parking_lot = "0.12.1"

# encoding
serde = "1.0.137"
bincode = "1.3.3"
byteorder = "1.4.3"

mlua = { version="0.7.4", features=["luajit52", "vendored"]}
bevy = "0.7.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
