[package]
name = "corrosive_physics"
version = "0.1.4"
edition = "2021"

[features]
bevy_support = ["bevy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# math
num = "0.4.1"
nalgebra = { version="0.32.3", features=["serde-serialize"]}
delaunator = "1.0.2"

# multithreading
rayon = "1.8.0"
parking_lot = "0.12.1"

# encoding
serde = "1.0.188"
bincode = "1.3.3"
byteorder = "1.4.3"

mlua = { version="0.9.1", features=["luajit52", "vendored"]}
bevy = { version="0.11.3", optional = true }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
